[package]
name = "cdtest"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"