[package]
name = "cdtest"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
humantime = "2.1"
humantime-serde = "1.1"
toml = "0.7"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
